@@ -1,6 +1,7 @@
 ===== SVN trunk  =====
 05/12/2010
 - bugfix missing declaration of $smarty in Smarty class
+- bugfix empty($foo) in {if} did drop a notice when $foo was not assigned
 
 01/12/2010
 - improvement of {debug} tag output
